# one-of-us

./: .env.example  .gitignore  Cargo.toml  OneOfUs.sol  README.md  build.rs  foundry.toml  guide.html  guide.md  one_of_us.sol
.github/workflows/: ci-cd-backend.yml  ci-cd-frontend.yml  forge-tests.yml  test.yml
app/: Cargo.toml
app/src/: lib.rs
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/src/: blockchain.ts  config.ts  db.ts  index.ts
broadcast/DeployOneOfUsAbi.s.sol/560048/: run-1764865248134.json
client/: Cargo.toml  build.rs
client/src/: lib.rs
deploy/: DeployOneOfUsAbi.s.sol  OneOfUsAbi.ts  README.md  classic-tx.ts  compile-sol.ts  config.ts  create-program-abi.ts  create-program.ts  fund-program.ts  init-program.ts  package-lock.json  package.json  read-state.ts  test-injected.ts  upload-code-api.ts  upload-code.ts
deploy/compiled/: _Users_evgenijfilatov_work_one-of-us_OneOfUs_sol_IOneOfUsCallbacks.abi  _Users_evgenijfilatov_work_one-of-us_OneOfUs_sol_OneOfUsAbi.abi  _Users_evgenijfilatov_work_one-of-us_OneOfUs_sol_OneOfUsCaller.abi
frontend/: .env.example  ARCHITECTURE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  serve.json  vite.config.ts
frontend/src/: App.css  App.new.tsx  App.tsx  index.css  one_of_us.idl
frontend/src/components/: index.ts
frontend/src/config/: constants.ts  env.ts
frontend/src/hooks/: useJoinProgram.tsx  useMemberCount.tsx  useSails.tsx  (+3 more)
sources/: OneOfUs.sol  one_of_us.idl  one_of_us.opt.wasm
src/: lib.rs
tests/: gtest.rs
(+27 files in other folders)
