[package]
name = "one-of-us-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = { version = "0.9.2", features = ["ethexe"] }
gprimitives = { version = "1.9.2", default-features = false, features = ["ethexe"] }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
